tests/negative/gold/missing_selector_test.gold
tests/negative/missing_selector_test.toit:6:13: error: Expected identifier
  none_fun. = unresolved
            ^
tests/negative/missing_selector_test.toit:6:15: error: Unresolved identifier: 'unresolved'
  none_fun. = unresolved
              ^~~~~~~~~~
tests/negative/missing_selector_test.toit:6:13: error: Can't invoke method on 'none' type
  none_fun. = unresolved
            ^
Compilation failed.
